@@ -6,6 +6,7 @@ Forthcoming
 * Performance enhancements on menu routines (Chris T and Steven M)
 * Projects and Departments can now have subprojects and Departments (Chris T)
 * Project/department mechanism generalized to support funds, etc (Chris T)
+* Removed the Config::Std dependency and moved to Config::General (Chris T)
 
 Changelog for 1.3 Series
 Initial Release:  Monday, Oct 12 2011
